# music-card

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js  yue2.css  yue2.html  yue2.js
docs/superpowers/plans/: 2026-07-08-music-card-tauri-port.md
docs/superpowers/specs/: 2026-07-08-music-card-tauri-port-design.md
electron/: main.js  preload.js
scripts/: generate-icon.js
src/: App.jsx  api.js  configData.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CardPreview.jsx  ConfigActions.jsx  ConfigPanel.jsx  CoverSearch.jsx  HistoryPanel.jsx
src/utils/: color.js  exportImage.js  icons.js  textFitter.js
