[package]
name = "music-card-maker"
version = "1.0.0"
description = "音乐卡片制作工具 - Tauri v2 + React"
authors = ["you"]
edition = "2021"

[lib]
name = "music_card_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
